Commented out HoN and TeC staff as per TESS-64.

--- a/ckanext/tess/templates/node/snippets/helper.html
+++ b/ckanext/tess/templates/node/snippets/helper.html
@@ -8,7 +8,7 @@
         <p>
             ELIXIR is a pan-European research infrastructure.
             It consists of <a href="/node/custom/hub.html">the Hub</a> and a number of ELIXIR nodes. Each participating node has a head of node, a training co-ordinator, and a technical co-ordinator.
-            You can add a new node here if your country has signed the declaration to join ELIXIR. Please be very thorough with the information you provide.
+            You can add a new node here if your country has signed the declaration to join ELIXIR.
         </p>
         {% endtrans %}
     </div>
