--- a/ckanext/tess/templates/workflow/index.html
+++ b/ckanext/tess/templates/workflow/index.html
@@ -17,33 +17,36 @@
 {% block primary_content_inner %}
 {% snippet 'snippets/search_form.html', type='workflow', query=c.q, sorting_selected=c.sort_by_selected, count=c.page.item_count, placeholder=_('Search workflows...'), show_empty=request.params, no_bottom_border=true if c.page.items %}
 
+
+{% set stages = [
+    {'name':'Query Sequence and Variation Data', 'id':'query-sequence-and-variation-data', 'coords':'10,80,75,160'},
+    {'name':'Known Structure in PDB', 'id':'known-structure-in-pdb', 'coords':'120,100,185,160'},
+    {'name':'Structure Analysis and model Quality', 'id':'structure-analysis-and-model-quality', 'coords':'200,100,275,160'},
+    {'name':'Close relative homology modelling', 'id':'close-relative---homology-modelling', 'coords':'120,220,185,285'},
+    {'name':'Remote relative Structure Prediction', 'id':'remote-relative---structure-prediction', 'coords':'120,310,185,375'},
+    {'name':'Active Site', 'id':'active-site', 'coords':'375,100,460,160'},
+    {'name':'Binding Site', 'id':'binding-site', 'coords':'375,170,460,230'},
+    {'name':'Interfaces', 'id':'interfaces', 'coords':'375,240,460,310'},
+    {'name':'Post-translational modifications', 'id':'post-translational-modifications', 'coords':'375,320,460,375'},
+    {'name':'Conserved Sites', 'id':'conserved-sites', 'coords':'375,385,460,450'},
+    {'name':'Visualization', 'id':'visualization', 'coords':'500,100,575,160'},
+    {'name':'Structure Based Analysis of Impact', 'id':'structure-based-analysis-of-impact', 'coords':'575,225,650,300'},
+    {'name':'Sequence Based Analysis of Impact', 'id':'sequence-based-analysis-of-impact', 'coords':'575,360,650,425'}
+    ]
+%}
 <p>
-  {% set new_link = h.url_for(controller='group', action='new') %}
-  <img src="/images/training-workflow.png" width="800" height="500" alt="Workflow" usemap="workflow">
+    <img src="/images/training-workflow.png" width="800" height="500" alt="Workflow" usemap="workflow">
     <map name="workflow">
-        <area shape="rect"    coords="10,80,75,160" href="{{new_link}}" alt="Query Sequence and Variation Data">
-        <!--green box -->
-        <area shape="rect" coords="120,100,185,160" href="{{new_link}}" alt="Known Structure in PDB">
-        <area shape="rect" coords="200,100,275,160" href="{{new_link}}" alt="Structure Analysis and model Quality">
-        <!-- blue box -->
-        <area shape="rect" coords="120,220,185,285" href="{{new_link}}" alt="Close relative homology modelling">
-        <area shape="rect" coords="120,310,185,375" href="{{new_link}}" alt="Remote relative Structure Prediction">
-        <!-- pink box -->
-        <area shape="rect" coords="375,100,460,160" href="{{new_link}}" alt="Active Site">
-        <area shape="rect" coords="375,170,460,230" href="{{new_link}}" alt="Binding Site">
-        <area shape="rect" coords="375,240,460,310" href="{{new_link}}" alt="Interfaces">
-        <area shape="rect" coords="375,320,460,375" href="{{new_link}}" alt="Post-translational modifications">
-        <area shape="rect" coords="375,385,460,450" href="{{new_link}}" alt="Conserved Sites">
-        <!-- Prximity of Genetic variation to annotated sites bit -->
-        <area shape="rect" coords="500,100,575,160" href="{{new_link}}" alt="Visualization">
-        <!-- Impact ASsessment Bit -->
-        <area shape="rect" coords="575,225,650,300" href="{{new_link}}" alt="Structure Based Analysis of Impact">
-        <area shape="rect" coords="575,360,650,425" href="{{new_link}}" alt="Sequence Based Analysis of Impact">
+        {% for stage in stages %}
+            <area shape="rect" coords="{{stage['coords']}}"
+                  href="{{h.url_for('group' ~ '_read', action='read', id=stage['id']) }}"
+                  alt="{{stage['name']}}">
+        {% endfor %}
     </map>
 </p>
-<p>
+<!--p>
   <img src="/images/training-workflow2.png" alt="Training workflow expanded" style="border:1px solid black"> 
-</p>
+</p-->
 
 <h1 class="hide-heading">{{ _('Workflows') }}</h1>
 {% block groups_search_form %}
