--- a/ckanext/tess/templates/package/read_base.html
+++ b/ckanext/tess/templates/package/read_base.html
@@ -60,17 +60,11 @@
 
 {% block package_elixir_node %}
 {% set node_id = pkg.get('node_id') %}
-{% if node_id %}
+{# Check if this node still exists and has not been deleted #}
+{% if node_id%}
     {% snippet "snippets/node.html", node=h.get_node(node_id) %}
 {% else %}
     {% snippet "snippets/new_node_prompt.html" %}
-{% endif %}
-
-{% if pkg.elixir_node and pkg.elixir_node|length >= 1 %}
-{# Looks like a list of nodes is returned but we only ever have 0 or 1 nodes #}
-{% set elixir_node = pkg.elixir_node[0] %}
-
-{% snippet "snippets/elixir_node.html", elixir_node=elixir_node, has_context_title=true %}
 {% endif %}
 {% endblock %}
 
