--- a/ckanext/tess/templates/package/search.html
+++ b/ckanext/tess/templates/package/search.html
@@ -6,6 +6,9 @@
   <li class="active">{{ h.nav_link(_('Training materials'), controller='package', action='search', highlight_actions = 'new index') }}</li>
 {% endblock %}
 
+{% block primary_content %}
+  <section class="module">
+    <div class="module-content">
       {% block page_primary_action %}
         {% if h.check_access('package_create') %}
           <div class="page_primary_action">
@@ -13,6 +16,37 @@
           </div>
         {% endif %}
       {% endblock %}
+      {% block form %}
+        {% set facets = {
+          'fields': c.fields_grouped,
+          'search': c.search_facets,
+          'titles': c.facet_titles,
+          'translated_fields': c.translated_fields,
+          'remove_field': c.remove_field }
+        %}
+        {% set sorting = [
+          (_('Relevance'), 'score desc, metadata_modified desc'),
+          (_('Name Ascending'), 'title_string asc'),
+          (_('Name Descending'), 'title_string desc'),
+          (_('Last Modified'), 'metadata_modified desc'),
+          (_('Popular'), 'views_recent desc') if g.tracking_enabled else (false, false) ]
+        %}
+        {% snippet 'snippets/search_form.html', type='dataset', query=c.q, sorting=sorting, sorting_selected=c.sort_by_selected, count=c.page.item_count, facets=facets, show_empty=request.params, error=c.query_error, fields=c.fields %}
+      {% endblock %}
+      {% block package_search_results_list %}
+        {{ h.snippet('snippets/package_list.html', packages=c.page.items) }}
+      {% endblock %}
+    </div>
+
+    {% block page_pagination %}
+      {{ c.page.pager(q=c.q) }}
+    {% endblock %}
+  </section>
+
+{% block package_search_results_api %}
+{% endblock %}
+
+{% endblock %}
 
 {% block secondary_content %}
 {# Reorder facets so that 'ELIXIR Nodes' (with internal key 'node_id') comes second after 'Content Provider' #}
@@ -27,5 +61,3 @@
 </div>
 {% endblock %}
 
-{% block package_search_results_api %}
-{% endblock %}
