--- a/ckanext/tess/templates/group/snippets/info.html
+++ b/ckanext/tess/templates/group/snippets/info.html
@@ -34,7 +34,7 @@
         </dl>
         <dl>
           <dt>{{ _('Training materials') }}</dt>
-          <dd>{{ h.SI_number_span(group.packages|length) }}</dd>
+          <dd>{{ h.SI_number_span(group.package_count) }}</dd>
         </dl>
       </div>
       {% endblock %}
