--- a/ckanext/tess/templates/node/snippets/materials_for_node.html
+++ b/ckanext/tess/templates/node/snippets/materials_for_node.html
@@ -6,7 +6,12 @@ hub - True if we're on the hub page and we need to have the header for each sect
 <h2>Training materials</h2>
 <hr/>
 {% set training_materials = h.get_node_materials(node) %}
-{% if training_materials|length > 0 %}
+{% set count = training_materials|length %}
+{% if count > 0 %}
+    {% if count > 5 %}
+        {% set training_materials = training_materials[:5] %}
+    {% endif %}
+
     <ul style="list-style: outside none none; margin-left: 5px;" >
     {% for training_material in training_materials %}
         {% snippet 'snippets/package_item.html', package=training_material %}
@@ -14,8 +19,9 @@ hub - True if we're on the hub page and we need to have the header for each sect
     </ul>
     <br>
 
-    <i><a href="{{  h.url_for(controller='package', action='search', node_id=node.get('name')) }}"
-       >All materials by the {{node.get('display_name')}} node </a></i>
+    <i>Displaying {{training_materials|length}} of {{count}} Materials.<br>
+        <a href="{{  h.url_for(controller='package', action='search', node_id=node.get('name')) }}"
+       >Click to see all materials</a></i>
 {% else %}
     <p class="module-content empty" style="padding: 0px; margin: 0px;">No training materials found for this node</p>
 {% endif %}
