--- a/ckanext/tess/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/tess/templates/package/snippets/package_basic_fields.html
@@ -56,7 +56,7 @@
   {% endif %}
 
   <div class="control-group">
-        <label class="control-label" for="field-elixir_node">{{ _("ELIXIR Node") }}</label>
+        <label class="control-label" for="field-elixir_node">{{ _("ELIXIR node") }}</label>
         <div class="controls">
             <select id="field-node_id" name="node_id" data-module="autocomplete">
                 <option value="" selected="selected">None</option>
