Loads of fiddling to cover the case where a node is deleted and a training material is still associtated with it. Nodes need proper cascade deletion.

--- a/ckanext/tess/templates/package/read_base.html
+++ b/ckanext/tess/templates/package/read_base.html
@@ -61,7 +61,7 @@
 {% block package_elixir_node %}
 {% set node_id = pkg.get('node_id') %}
 {# Check if this node still exists and has not been deleted #}
-{% if node_id%}
+{% if node_id and h.get_node(node_id)%}
     {% snippet "snippets/node.html", node=h.get_node(node_id) %}
 {% else %}
     {% snippet "snippets/new_node_prompt.html" %}
