--- a/ckanext/tess/templates/snippets/facet_list.html
+++ b/ckanext/tess/templates/snippets/facet_list.html
@@ -34,15 +34,20 @@
                     {% set href = h.remove_url_param(name, item.name, extras=extras, alternative_url=alternative_url) if item.active else h.add_url_param(new_params={name: item.name}, extras=extras, alternative_url=alternative_url) %}
                     {% set label = label_function(item) if label_function else item.display_name %}
                     {% if title == ('ELIXIR Nodes'): %}
+                        {# check if the node itself is not deleted #}
                         {% set label = h.display_name_of_node(item.display_name) %}
                     {% endif %}
-                    {% set label_truncated = h.truncate(label, 22) if not label_function else label %}
-                    {% set count = count_label(item['count']) if count_label else ('(%d)' % item['count']) %}
-                      <li class="{{ nav_item_class or 'nav-item' }}{% if item.active %} active{% endif %}">
+                    {% if label: %}
+                        {% set label_truncated = h.truncate(label, 22) if not label_function else label %}
+                        {% set count = count_label(item['count']) if count_label else ('(%d)' % item['count']) %}
+                        <li class="{{ nav_item_class or 'nav-item' }}{% if item.active %} active{% endif %}">
                         <a href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
                           <span>{{ label_truncated }} {{ count }}</span>
                         </a>
-                      </li>
+                        </li>
+                    {% else %}
+                        <p class="module-content empty">There are no nodes that match this search</p>
+                    {% endif %}
                   {% endfor %}
                 </ul>
               </nav>
