--- a/ckanext/tess/templates/node/snippets/node_template.html
+++ b/ckanext/tess/templates/node/snippets/node_template.html
@@ -16,7 +16,7 @@
         </div>
         <div style="float: left; padding-left: 10px;">
             {% if country_code : %}
-                <img src="/images/node_flags/{{ country_code }}.png" class="img-circle" style="max-height: 60px;"/>
+                <img src="/images/node_flags/{{ country_code }}.png" class="img-circle-small" style="max-height: 60px;"/>
             {% endif %}
         </div>
         <div style="float: left; width: 60%;">
