--- a/ckanext/tess/templates/node/snippets/node_item.html
+++ b/ckanext/tess/templates/node/snippets/node_item.html
@@ -19,7 +19,7 @@ Example:
 <li class="media-item">
   {% block image %}
     {% if node.get('country_code'): %}
-        <img src="/images/node_flags/{{node.get('country_code')}}.png" class="img-circle" style="max-height:60px;">
+        <img src="/images/node_flags/{{node.get('country_code')}}.png" class="img-circle-small" style="max-height:60px;">
     {% else %}
         <img src="{{ node.image_display_url or h.url_for_static('/images/empty.gif') }}" alt="{{ node.name }}" class="media-image">
     {% endif %}
