--- a/ckanext/tess/templates/snippets/node_info.html
+++ b/ckanext/tess/templates/snippets/node_info.html
@@ -9,9 +9,9 @@
 
         {% block image %}
             {% if logo_link %}
-            <div class="image img-circle">
+            <div>
                 <a href="{{url}}">
-                   <img src="{{logo_link}}"
+                   <img class="img-circle-small" src="{{logo_link}}"
                      alt="{{ node.get('display_name') }}" style="max-height:60px;">
                 </a>
             </div>
