--- a/ckanext/tess/templates/node/index.html
+++ b/ckanext/tess/templates/node/index.html
@@ -3,14 +3,14 @@
 {% block subtitle %}{{ _('Content providers') }}{% endblock %}
 
 {% block breadcrumb_content %}
-  <li class="active">{% link_for _('Nodes'), controller='ckanext.tess.controller:NodeController', action='index' %}</li>
+  <li class="active">{% link_for _('Nodes'), controller='ckanext.tess.node:NodeController', action='index' %}</li>
 {% endblock %}
 
 {% block page_header %}{% endblock %}
 
 {% block page_primary_action %}
   {#% if h.check_access('node_create') %#}
-    {% link_for _('Add node'), controller='ckanext.tess.controller:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+    {% link_for _('Add node'), controller='ckanext.tess.node:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
   {#% endif %#}
 {% endblock %}
 
@@ -29,7 +29,7 @@
       <p class="empty">
         {{ _('There are currently no ELIXIR nodes for this site') }}.
         {#% if h.check_access('node_create') %#}
-          {% link_for _('How about creating one?'), controller='ckanext.tess.controller:NodeController', action='new' %}</a>
+          {% link_for _('How about creating one?'), controller='ckanext.tess.node:NodeController', action='new' %}</a>
         {#% endif %#}
       </p>
     {% endif %}
