--- a/ckanext/tess/templates/node/read_base.html
+++ b/ckanext/tess/templates/node/read_base.html
@@ -3,8 +3,8 @@
 {% block subtitle %}{{ c.group_dict.display_name }} - {{ _('Node') }}{% endblock %}
 
 {% block breadcrumb_content %}
-  <li>{% link_for _('Nodes'), controller='ckanext.tess.controller:NodeController', action='index' %}</li>
-  <li class="active">{% link_for c.group_dict.display_name|truncate(35), controller='ckanext.tess.controller:NodeController', action='read', id=c.group_dict.name %}</li>
+  <li>{% link_for _('Nodes'), controller='ckanext.tess.node:NodeController', action='index' %}</li>
+  <li class="active">{% link_for c.group_dict.display_name|truncate(35), controller='ckanext.tess.node:NodeController', action='read', id=c.group_dict.name %}</li>
 {% endblock %}
 
 {% block content_action %}
