--- a/ckanext/tess/templates/snippets/organization.html
+++ b/ckanext/tess/templates/snippets/organization.html
@@ -43,11 +43,12 @@ Example:
         <div class="nums">
           <dl>
             <dt>{{ _('Followers') }}</dt>
-            <dd>{{ h.SI_number_span(organization.num_followers) }}</dd>
+
+            <dd>{{ h.SI_number_span(organization.get('num_followers', 0)) }}</dd>
           </dl>
           <dl>
             <dt>{{ _('Training materials') }}</dt>
-            <dd>{{ h.SI_number_span(organization.package_count) }}</dd>
+            <dd>{{ h.SI_number_span(organization.get('package_count', 0)) }}</dd>
           </dl>
         </div>
         <div class="follow_button">
@@ -56,4 +57,41 @@ Example:
       {% endif %}
     </section>
   </div>
+
+    {% set homepage = organization.get('homepage', None) %}
+    {% if homepage %}
+        <div class="module module-narrow module-shallow context-info">
+            <h2 class="module-heading"> Homepage</h2>
+            <section class="module-content">
+                <div style="word-break: break-all">
+                    <a href="{{ c.group_dict.homepage}}"> {{c.group_dict.homepage}}</a>
+                </div>
+            </section>
+        </div>
+    {% endif %}
+
+    {% set node_name = organization.get('node_id', None) %}
+    {% if node_name %}
+        {% set node = h.get_node(node_name) %}
+        {% set node_url = h.url_for(controller='ckanext.tess.node:NodeController', action='read', id=node_name) %}
+        {% if node.get('country_code', None) %}
+            {% set logo_link = h.url_for_static('/images/node_flags/' + node.get('country_code') + '.png') %}
+        {% endif %}
+        <div class="module module-narrow module-shallow context-info">
+            <h2 class="module-heading"><div class="icon-elixir"></div> Member of Node:</h2>
+            <section class="module-content">
+                {% if logo_link %}
+                <div>
+                    <a href="{{ node_url }}">
+                       <img class="img-circle-small" src="{{logo_link}}"
+                         alt="{{ node.get('display_name') }}" style="max-height:60px;">
+                    </a>
+                </div>
+                {% endif %}
+            <a href="{{ node_url }}">
+                <h1 class="heading">{{ node.get('display_name') }}</h1>
+            </a>
+          </section>
+        </div>
+    {% endif %}
   {% endblock %}
