Fix for TESS-12: added TeSS support email

--- a/ckanext/tess/templates/footer.html
+++ b/ckanext/tess/templates/footer.html
@@ -1,7 +1,8 @@
 {% ckan_extends %}
 
 {% block footer_links %}
-<li><a target="_blank" href="http://elixir-uk.org/"><img src="/images/elixir-uk-logo-small.png"></a></li>
+    <a target="_blank" href="http://elixir-uk.org/"><img src="/images/elixir-uk-logo-small.png"></a>
+    <span style="padding-left:50px;"><b>Contact us: </b><a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a></span>
 {% endblock %}
 
 {% block footer_links_ckan %}
