--- a/ckanext/tess/templates/home/about.html
+++ b/ckanext/tess/templates/home/about.html
@@ -31,11 +31,14 @@
             By plugging the skills gap we aim to strengthen science across Europe, and will set the agenda for training needs in the future.
         </p>
         <a name="contact"></a><h2>Contact us</h2>
-        <p>If you have any queries about TeSS, please email one of the following people (in alphabetical order):</p>
-        <p><a href="mailto:teresa.k.attwood@manchester.ac.uk">Teresa (Terri) Atwood</a> (ELIXIR-UK/TeSS co-investigator @Manchester)</p>
-        <p><a href="mailto:niall.beard@manchester.ac.uk">Niall Beard</a> (ELIXIR-UK/TeSS developer @Manchester)</p>
-        <p><a href="mailto:a.nenadic@manchester.ac.uk">Aleksandra Nenadic</a> (ELIXIR-UK training coordinator for infrastructure technology @Manchester)</p>
-        <p><a href="mailto:milo.thurston@oerc.ox.ac.uk">Milo Thurston</a> (ELIXIR-UK/TeSS developer @Oxford)</p>
+        <p>If you have any queries about TeSS, please email <a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info</a>.</p>
+        <p>You can also email directly one of the following people (in alphabetical order):</p>
+        <ul>
+        <li><a href="mailto:teresa.k.attwood@manchester.ac.uk">Teresa (Terri) Atwood</a> (ELIXIR-UK/TeSS co-investigator @Manchester)</li>
+        <li><a href="mailto:niall.beard@manchester.ac.uk">Niall Beard</a> (ELIXIR-UK/TeSS developer @Manchester)</li>
+        <li><a href=mailto:a.nenadic@manchester.ac.uk">Aleksandra Nenadic</a> (ELIXIR-UK training coordinator for infrastructure technology and TeSS @Manchester)</li>
+        <li><a href="mailto:milo.thurston@oerc.ox.ac.uk">Milo Thurston</a> (ELIXIR-UK/TeSS developer @Oxford)</li>
+        </ul>
         <a name="faq"> </a>
         <h2>FAQ</h2>
         <p>
