--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -452,3 +452,10 @@ hr.style-one {
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
+
+.node-admin-stats{
+    background-color: #f5f5f5;
+    padding: 40px;
+    margin: 15px 0px;
+    width: 90%;
+}
