Fix for TeSS-54: added fields for adding member institutions for a node. Still needs adding a content provider as a member.

--- a/ckanext/tess/fantastic/tess.css
+++ b/ckanext/tess/fantastic/tess.css
@@ -431,11 +431,17 @@ hr.style-one {
     padding-bottom: 0;
   }
 }
+
 .img-circle-small {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
+
 .extraStaffTemplate {
+    display:none;
+}
+
+.extraInstitutionsTemplate {
     display:none;
 }
