--- a/ckanext/tess/templates/node/snippets/node_form.html
+++ b/ckanext/tess/templates/node/snippets/node_form.html
@@ -70,23 +70,42 @@
 
     {{ form.input('home_page', label=_('Home page'), id='home_page', placeholder=("URL of the node's home page"), value=data.home_page, classes=['control-medium']) }}
 
-    <!--{{ form.input('hon', label=_('Head of node'), id='hon', placeholder=('Name of the head of node'), value=data.hon, classes=['control-medium']) }}-->
-    <!--{{ form.input('hon_email', label=_("Head of node's email"), id='hon_email', placeholder=('Email address of the head of node'), value=data.hon_email, classes=['control-medium']) }}-->
-    <!--{% set is_upload = data.hon_image and not data.hon_image.startswith('http') %}-->
-    <!--{% set is_url = data.hon_image and data.hon_image.startswith('http') %} -->
-    <!--{{ form.image_upload(data, errors, field_url="hon_image", url_label="Head of node's image", is_upload_enabled=h.uploads_enabled(), is_url=is_url, is_upload=is_upload) }} -->
+    <hr>
+    <!-- Add member institutions -->
+    <div class='controls'><p>Add member institutions for the node</p></div>
+    <div class="extraInstitutionsTemplate">
+        {{ form.input('institution_name', label=_("Institution's name"), id='institution_name', placeholder=("Name of the institution"), classes=['control-medium']) }}
+        {{ form.input('institution_home_page', label=_("Institution's home page"), id='institution_home_page', placeholder=("Home page of the institution"), classes=['control-medium']) }}
+        {{ form.input('institution_image', label=_("Institution's logo"), id='institution_image', placeholder=("Logo of the institution"), classes=['control-medium']) }}
+        <a href="#" id="removeInstitution" class="controls"><i class="icon-minus-sign icon-white"></i> Remove institution</p></a>
+    </div>
+    <div id="extraInstitutionsContainer">
+        {% set institutions_obj = h.string_to_json_object(data.institutions) %}
+        {% if institutions_obj and institutions_obj['institutions']|length > 0: %}
+            {% for institution in institutions_obj['institutions']%}
+            <div class="institution">
+                {{ form.input('institution_name', label=_("Institution's name"), id='institution_name', placeholder=("Name of the institution"), value=institution['name'], classes=['control-medium']) }}
+                {{ form.input('institution_home_page', label=_("Institution's home page"), id='institution_home_page', placeholder=("Home page of the institution"), value=institution['home_page'], classes=['control-medium']) }}
+                {{ form.input('institution_image', label=_("Institution's logo"), id='institution_image', placeholder=("Logo of the institution"), value=institution['image'], classes=['control-medium']) }}
+                <a href="#" id="removeInstitution" class="controls"><i class="icon-minus-sign icon-white"></i> Remove institution</p></a>
+            </div>
+            {% endfor %}
+        {% else %}
+            <div class="institution">
+                {{ form.input('institution_name', label=_("Institution's name"), id='institution_name', placeholder=("Name of the institution"), classes=['control-medium']) }}
+                {{ form.input('institution_home_page', label=_("Institution's home page"), id='institution_home_page', placeholder=("Home page of the institution"), classes=['control-medium']) }}
+                {{ form.input('institution_image', label=_("Institution's logo"), id='institution_image', placeholder=("Logo of the institution"), classes=['control-medium']) }}
+            </div>
+        {% endif %}
+    </div>
+    <a href="#" id="addInstitution"><i class="icon-plus-sign icon-white"></i> Add another institution</p></a>
 
+    <hr>
     {{ form.input('trc', label=_('Training coordinator'), id='trc', placeholder=('Name of the training coordinator'), value=data.trc, classes=['control-medium']) }}
     {{ form.input('trc_email', label=_("Training coordinator's email"), id='trc_email', placeholder=('Email address of the training coordinator'), value=data.trc_email, classes=['control-medium']) }}
     {% set is_upload = data.trc_image and not data.trc_image.startswith('http') %}
     {% set is_url = data.trc_image and data.trc_image.startswith('http') %} 
     {{ form.image_upload(data, errors, field_url="trc_image", url_label="Training coordinator's image", is_upload_enabled=h.uploads_enabled(), is_url=is_url, is_upload=is_upload) }} 
-
-    <!--{{ form.input('tec', label=_('Technical coordinator'), id='tec', placeholder=('Name of the technical coordinator'), value=data.tec, classes=['control-medium']) }}-->
-    <!--{{ form.input('tec_email', label=_("Technical coordinator's email"), id='tec_email', placeholder=('Email address of the technical coordinator'), value=data.tec_email, classes=['control-medium']) }}-->
-    <!--{% set is_upload = data.tec_image and not data.tec_image.startswith('http') %}-->
-    <!--{% set is_url = data.tec_image and data.tec_image.startswith('http') %} -->
-    <!--{{ form.image_upload(data, errors, field_url="tec_image", url_label="Technical coordinator's image", is_upload_enabled=h.uploads_enabled(), is_url=is_url, is_upload=is_upload) }} -->
 
     <!-- Add more training staff input fields -->
     <div class="extraStaffTemplate">
@@ -109,10 +128,12 @@
         {% endif %}
     </div>
     <a href="#" id="addStaffMember"><i class="icon-plus-sign icon-white"></i> Add another member of staff</p></a>
+    <hr>
 
     {{ form.input('twitter', label=_("Twitter handle"), id='twitter', placeholder=("Handle of the node's twitter feed, e.g @ElixirNodeUK"), value=data.twitter, classes=['control-full']) }}
+    <hr>
 
-    <div class='controls'><p>Add up to three images for the node page's carousel.</p></div>
+    <div class='controls'><p>Add up to three images for the node page's carousel</p></div>
     {% set carousel_images = [] %}
     {% if data.carousel_image_1: %}
         {% set carousel_images = carousel_images + [data.carousel_image_1] %}
