Added icon so access node administration

--- a/ckanext/tess/templates/user/read_base.html
+++ b/ckanext/tess/templates/user/read_base.html
@@ -12,6 +12,10 @@
 {% block content_action %}
   {% if h.check_access('user_update', user) %}
     {% link_for _('Manage'), controller='user', action='edit', id=user.name, class_='btn', icon='wrench' %}
+    {% link_for _('Assign Materials to Nodes'), controller='ckanext.tess.admin:AdminController', action='bulk_process_materials', class_='btn', icon='wrench' %}
+  {% endif %}
+  {% if h.check_access('user_update', user) %}
+
   {% endif %}
 {% endblock %}
 
