--- a/ckanext/tess/templates/node/snippets/staff_for_node.html
+++ b/ckanext/tess/templates/node/snippets/staff_for_node.html
@@ -1,6 +1,21 @@
 <h2>Staff</h2>
 <hr/>
 
+{% if node.get('trc') %}
+<p class="module-content" style="padding: 0px; margin: 0px;">
+   <h3>{{ node.get('trc') }}</h3>
+    {% if node.get('trc_email') %}
+       <b>Email Address:</b> {{node.get('trc_email')}} <br>
+    {% endif %}
+    {% if node.get('trc_image') %}
+      <img src="{{ node.get('trc_image') }}" style="max-width:100%">
+    {% endif %}
+    <b>Role:</b> Training Co-ordinator <br>
+<hr>
+</p>
+{% endif %}
+
+
 {% set staff_string = node.get('staff') %}
 {% if staff_string %}
     {% set staff_members = h.string_to_json_object(staff_string) %}
