Removed custom staff/institutes bits

--- a/ckanext/tess/templates/node/custom/GB.html
+++ b/ckanext/tess/templates/node/custom/GB.html
@@ -56,7 +56,7 @@ The blocks are listed below. Move them out of this comment bracket to override.
 {% endblock %}
 
 
-{% block staff %}
+{# block staff %}
 <li class="media-item masonry-brick node-brick">
     <h2>Staff</h2>
     <hr/>
@@ -81,9 +81,9 @@ The blocks are listed below. Move them out of this comment bracket to override.
     Niall Beard <br>
     Milo Thurston
 </li>
-{% endblock %}
+{% endblock #}
 
-{% block organizations %}
+{# block organizations %}
     <li class="media-item masonry-brick node-brick">
     <h2>Member institutions</h2>
     <hr/>
@@ -94,4 +94,4 @@ The blocks are listed below. Move them out of this comment bracket to override.
             <img src="/images/institutions/manchester.jpg" style="width: 120px;"/></a>
     </div>
     </li>
-{% endblock %}
+{% endblock #}
